Rebuild cosmetics UI in main Mod Menu style with reliable controls